# ai-cli

./: Cargo.toml  README.md
docs/: DESIGN.md
src/: lib.rs  main.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/pipeline/: mod.rs  transform.rs
src/providers/: claude.rs  codex.rs  gemini.rs  mod.rs
tests/: auth_manager_tests.rs  claude_provider_tests.rs  cli_parser_tests.rs  context_management_tests.rs  pipeline_executor_tests.rs  pipeline_parser_tests.rs  provider_tests.rs
