[package]
name = "ai-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.12", features = ["stream", "json"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
colored = "2.1"
nom = "7.1"
dashmap = "6.0"
futures = "0.3"
dirs = "5.0"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
pretty_assertions = "1.4"
